--- a/angular.json
+++ b/angular.json
@@ -142,9 +142,27 @@
               "devServerTarget": "app:serve:ci"
             }
           }
+        },
+        "ionic-cordova-build": {
+            "builder": "@ionic/cordova-builders:cordova-build",
+            "options": {
+              "browserTarget": "app:build"
+            },
+            "configurations": {
+              "production": {
+                "browserTarget": "app:build:production"
+              }
+            }
+        },
+        "ionic-cordova-serve": {
+          "builder": "@ionic/cordova-builders:cordova-serve",
+          "options": {
+            "cordovaBuildTarget": "app:ionic-cordova-build",
+            "devServerTarget": "app:serve"
+          }
         }
-      }
     }
+  }
   },
   "cli": {
     "defaultCollection": "@ionic/angular-toolkit"
