--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "homepage": "https://ionicframework.com/",
   "scripts": {
     "ng": "ng",
-    "start": "ng serve",
+    "start": "ng serve --proxy-config proxy.config.js",
     "build": "ng build",
     "test": "ng test",
     "lint": "ng lint",
@@ -31,6 +31,7 @@
     "@angular/platform-browser": "~13.2.2",
     "@angular/platform-browser-dynamic": "~13.2.2",
     "@angular/router": "~13.2.2",
+    "@awesome-cordova-plugins/social-sharing": "^5.41.0",
     "@ionic-native/android-permissions": "^5.36.0",
     "@ionic-native/background-mode": "^5.36.0",
     "@ionic-native/camera": "^5.36.0",
@@ -42,7 +43,7 @@
     "@ionic-native/splash-screen": "^5.36.0",
     "@ionic-native/sqlite": "^5.36.0",
     "@ionic-native/status-bar": "^5.36.0",
-    "@ionic/angular": "^6.0.15",
+    "@ionic/angular": "^6.1.3",
     "@ionic/cordova-builders": "^6.1.0",
     "@mapbox/node-pre-gyp": "^1.0.9",
     "assert": "^2.0.0",
@@ -84,7 +85,7 @@
     "cordova-plugin-androidx": "^3.0.0",
     "cordova-plugin-androidx-adapter": "^1.1.3",
     "cordova-plugin-background-mode": "^0.7.3",
-    "cordova-plugin-camera": "^5.0.1",
+    "cordova-plugin-camera": "^6.0.0",
     "cordova-plugin-camera-preview": "^0.12.1",
     "cordova-plugin-device": "2.0.2",
     "cordova-plugin-dialogs": "^1.3.3",
@@ -103,6 +104,7 @@
     "cordova-plugin-spinnerdialog": "^1.3.2",
     "cordova-plugin-splashscreen": "5.0.2",
     "cordova-plugin-statusbar": "^2.4.2",
+    "cordova-plugin-x-socialsharing": "^6.0.3",
     "cordova-plugin-x-toast": "^2.6.2",
     "cordova-sqlite-ext": "^6.0.0",
     "cordova.plugins.diagnostic": "^3.7.1",
@@ -166,8 +168,9 @@
       "cordova-plugin-splashscreen": {},
       "cordova-plugin-android-permissions": {},
       "cordova-plugin-camera": {
-        "ANDROID_SUPPORT_V4_VERSION": "27.+"
-      }
+        "ANDROIDX_CORE_VERSION": "1.6.+"
+      },
+      "cordova-plugin-x-socialsharing": {}
     },
     "platforms": [
       "android"
