--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "homepage": "https://ionicframework.com/",
   "scripts": {
     "ng": "ng",
-    "start": "ng serve --proxy-config proxy.config.js",
+    "start": "ng serve",
     "build": "ng build",
     "test": "ng test",
     "lint": "ng lint",
@@ -48,6 +48,7 @@
     "@mapbox/node-pre-gyp": "^1.0.9",
     "assert": "^2.0.0",
     "bcryptjs": "^2.4.3",
+    "br-mask": "0.0.10",
     "browserify-zlib": "^0.2.0",
     "constants-browserify": "^1.0.0",
     "cordova-android": "10.1.1",
@@ -78,7 +79,7 @@
     "@ionic/angular-toolkit": "^6.0.0",
     "@types/jasmine": "~3.6.0",
     "@types/jasminewd2": "~2.0.3",
-    "@types/node": "^12.11.1",
+    "@types/node": "^12.20.50",
     "@typescript-eslint/eslint-plugin": "5.3.0",
     "@typescript-eslint/parser": "5.3.0",
     "cordova-plugin-android-permissions": "^1.1.2",
