--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
     "@ionic-native/geolocation": "^5.36.0",
     "@ionic-native/keyboard": "^5.36.0",
     "@ionic-native/local-notifications": "^5.36.0",
+    "@ionic-native/native-geocoder": "^5.36.0",
     "@ionic-native/network": "^5.36.0",
     "@ionic-native/screen-orientation": "^5.36.0",
     "@ionic-native/splash-screen": "^5.36.0",
@@ -54,6 +55,7 @@
     "cordova-android": "10.1.1",
     "crypto-browserify": "^3.12.0",
     "https-browserify": "^1.0.0",
+    "jquery": "^3.6.0",
     "node-pre-gyp": "^0.17.0",
     "os-browserify": "^0.3.0",
     "request": "^2.79.0",
@@ -79,9 +81,11 @@
     "@ionic/angular-toolkit": "^6.0.0",
     "@types/jasmine": "~3.6.0",
     "@types/jasminewd2": "~2.0.3",
+    "@types/jquery": "^3.5.14",
     "@types/node": "^12.20.50",
     "@typescript-eslint/eslint-plugin": "5.3.0",
     "@typescript-eslint/parser": "5.3.0",
+    "cordova-plugin-add-swift-support": "^2.0.2",
     "cordova-plugin-android-permissions": "^1.1.2",
     "cordova-plugin-androidx": "^3.0.0",
     "cordova-plugin-androidx-adapter": "^1.1.3",
@@ -98,6 +102,7 @@
     "cordova-plugin-inappbrowser": "^3.0.0",
     "cordova-plugin-ionic-keyboard": "^2.0.5",
     "cordova-plugin-ionic-webview": "^5.0.0",
+    "cordova-plugin-nativegeocoder": "^3.4.1",
     "cordova-plugin-network-information": "^2.0.2",
     "cordova-plugin-request-location-accuracy": "^2.2.2",
     "cordova-plugin-screen-orientation": "^3.0.2",
@@ -161,9 +166,7 @@
         "ANDROID_SUPPORT_V4_VERSION": "27.+"
       },
       "cordova-sqlite-ext": {},
-      "cordova-plugin-geolocation": {
-        "GPS_REQUIRED": "true"
-      },
+      "cordova-plugin-geolocation": {},
       "cordova-plugin-androidx": {},
       "cordova-plugin-androidx-adapter": {},
       "cordova-plugin-splashscreen": {},
@@ -171,7 +174,8 @@
       "cordova-plugin-camera": {
         "ANDROIDX_CORE_VERSION": "1.6.+"
       },
-      "cordova-plugin-x-socialsharing": {}
+      "cordova-plugin-x-socialsharing": {},
+      "cordova-plugin-nativegeocoder": {}
     },
     "platforms": [
       "android"
