--- a/package.json
+++ b/package.json
@@ -47,6 +47,7 @@
     "@ionic/angular": "^6.1.3",
     "@ionic/cordova-builders": "^6.1.0",
     "@mapbox/node-pre-gyp": "^1.0.9",
+    "@types/google.maps": "^3.49.2",
     "assert": "^2.0.0",
     "bcryptjs": "^2.4.3",
     "br-mask": "0.0.10",
@@ -79,6 +80,7 @@
     "@angular/compiler-cli": "~13.2.2",
     "@angular/language-service": "~13.2.2",
     "@ionic/angular-toolkit": "^6.0.0",
+    "@types/googlemaps": "^3.43.3",
     "@types/jasmine": "~3.6.0",
     "@types/jasminewd2": "~2.0.3",
     "@types/jquery": "^3.5.14",
